# Raytracer

./: .gitignore  CMakeLists.txt  README.md
lib/FrameBuffer/: CMakeLists.txt  FrameBuffer.cpp  FrameBuffer.hpp
lib/Math/: CMakeLists.txt  Math.hpp
lib/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp
lib/Scene3d/: CMakeLists.txt
lib/Scene3d/Camera/: Camera.cpp  Camera.hpp
lib/Scene3d/Light/: AmbientLight.cpp  DirectionalLight.cpp  Light.cpp  Light.hpp  PointLight.cpp
lib/Scene3d/Primitive/: Face.cpp  Mesh.cpp  Plane.cpp  Primitive.cpp  Primitive.hpp  Sphere.cpp
lib/Scene3d/Scene/: Scene.cpp  Scene.hpp
lib/Scene3d/Serializable/: Serializable.hpp
scenes/: default.json  triangle.json
src/: CommandLineParserParams.cpp  Main.cpp  Program.hpp  ProgramParams.cpp
